Add: git command list items

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <li>git clone</li>
         <li>git status</li>
         <li>git add</li>
-        <li>git commit</li>
+        <li>git commit -m</li>
         <li>git diff</li>
+        <li>git commit --amend</li>
       </ul>
   </body>
 </html>
